--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,8 @@
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.cl-drawerRoot{
+  z-index: 10;
+
+}
